Correções e alterações no front end

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang ="pt-br">
 <head>
-<meta charset="UTF-8">
-<title>Programa Saúde Maranguape</title>
+<meta charset="utf-8">
+<link rel="icon" href="imagens/favicon.ico">
+<link rel="stylesheet" href="style.css">
+<title>Saúde Maranguape</title>
 </head>
 <body>
-	<a href="acessarLoginAdmin">acessarLoginAdmin</a>
-	<a href="acessarLoginFuncionario">acessarLoginFuncionario</a>
-	<a href="cidadaoSelecionarUnidade">cidadao</a>
+	<h1>Programa Saúde Maranguape</h1>
+	<!-- imagem é um link -->
+
+	<span style="margin-left: 90px" >
+		<a href="cidadaoSelecionarUnidade"> <img class="cidadao" alt="Janela do cidadão" 
+		src="imagens/cidadao-full.png"></a>
+	</span>
+	<span >
+		<a href="acessarLoginFuncionario"><img class="prof" alt="Janela do Profissional" 
+		src="imagens/funcionario-full.png"></a>
+	</span>
+	<span style="margin-right: 90px" >
+		<a href="acessarLoginAdmin"><img class="prof" alt="Janela do Admin" 
+		src="imagens/admin-full.png"></a>
+	</span>
+	
 </body>
 </html>
